--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
   </head>
   <body>
+    <h1>Contact Page</h1>
+    <h2>
+      Please reach out to
+      <a href="mailto:croissantplease@croissant.com"
+        >croissantplease@croissant.com</a
+      >
+    </h2>
     <a href="/index.html">Back to homepage</a>
     <a href="/photo.html">See Album</a>
   </body>
