--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Document</title>
+    <title>Contact Page - croissant.com </title>
+    <meta name = "description" content = "contact us about our passion for croissants"/>
   </head>
   <body>
     <h1>Contact Page</h1>
-    <h2>
+    <h2>Are you as passionate about croissants as we are? We'd love to hear from you! </h2>
+    <h3>
       Please reach out to
       <a href="mailto:croissantplease@croissant.com"
         >croissantplease@croissant.com</a
