--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Croissant</title>
+    <title>Delicious Croissants - passionateforcroissants.com</title>
+    <meta
+      name="description"
+      content="Everything there is to know about croissants"
+    />
   </head>
   <body>
-    <h1>Croissant</h1>
+    <h1>🥐Croissant🥐</h1>
+    <p>
+      Who doesn't love a good croissant? We are passionate about croissants and
+      we are glad you found our page. We hope you're as passionate about them as
+      we are!
+    </p>
     <a href="/contact.html">contact me</a>
     <a href="/photo.html">see album</a>
   </body>
