--- a/photo.html
+++ b/photo.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Document</title>
+    <title></title>
   </head>
   <body>
-    <a href="/index.html">homepage</a>
-    <a href="/contact.html">contact me</a>
-    <img src="/images/pexels-zen-chung-5749812.jpg" alt="" class="photo" />
+    <a href="/index.html" title="home">homepage</a>
+    <a href="/contact.html" title="contact">contact me</a>
+    <img
+      src="/images/pexels-zen-chung-5749812.jpg"
+      alt="man croissant"
+      class="photo"
+    />
   </body>
 </html>
